--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm install && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -27,14 +27,16 @@
   "devDependencies": {
     "@types/express-session": "^1.18.0",
     "@types/node": "^20.16.11",
-    "@types/react": "^18",
+    "@types/react": "18.3.18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "nodemon": "^3.1.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
