--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.11.1",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "cookies-next": "^4.3.0",
     "discord.js": "^14.16.3",
@@ -20,7 +21,9 @@
     "next": "^14.2.15",
     "next-auth": "^4.24.8",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
   },
